Stack technology -cloud -5

--- a/references.bib
+++ b/references.bib
@@ -164,7 +164,6 @@
   Pages                    = {1477--1479},
   Volume                   = {360},
 
-  __markedentry            = {[ilias:]},
   Booktitle                = {New England Journal of Medicine},
   Comment                  = {doi: 10.1056/NEJMp0901592},
   Doi                      = {10.1056/NEJMp0901592},
@@ -250,6 +249,21 @@
   Timestamp                = {2015.10.11}
 }
 
+@Article{Briscoe2009,
+  Title                    = {Digital Ecosystems in the Clouds: Towards Community Cloud Computing},
+  Author                   = {Gerard Briscoe and
+ Alexandros Marinos},
+  Journal                  = {CoRR},
+  Year                     = {2009},
+  Volume                   = {abs/0903.0694},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-0903-0694},
+  Owner                    = {revekka},
+  Timestamp                = {Mon, 05 Dec 2011 18:05:28 +0100},
+  Url                      = {http://arxiv.org/abs/0903.0694}
+}
+
 @InProceedings{Gamification_on_Participation,
   Title                    = {Effects of Gamification on Participation and Data Quality in a Real-World Market Research Domain},
   Author                   = {Jared Cechanowicz and Carl Gutwin and Briana Brownell and Larry Goodfellow},
@@ -304,6 +318,16 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.11}
+}
+
+@Article{condori,
+  Title                    = {Community cloud computing},
+  Author                   = {X. G. Condori},
+  Journal                  = {Revista de Información Teconología Y Sociedad},
+  Year                     = {2013},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Article{Custer2007,
@@ -409,6 +433,26 @@
   ISSN                     = {1423-0410},
   Publisher                = {Blackwell Publishing Ltd},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2002.tb05295.x}
+}
+
+@Article{Doelitzscher2011,
+  Title                    = {Private cloud for collaboration and e-Learning services: from IaaS to SaaS},
+  Author                   = {Doelitzscher, Frank and Sulistio, Anthony and Reich, Christoph and Kuijs, Hendrik and Wolf, David},
+  Journal                  = {Computing},
+  Year                     = {2011},
+  Number                   = {1},
+  Pages                    = {23-42},
+  Volume                   = {91},
+
+  __markedentry            = {[revekka:6]},
+  Doi                      = {10.1007/s00607-010-0106-z},
+  ISSN                     = {0010-485X},
+  Keywords                 = {Cloud computing; Dynamic VM creation; Shibboleth; PaaS; e-Learning; 68M14; 68M20},
+  Language                 = {English},
+  Owner                    = {revekka},
+  Publisher                = {Springer Vienna},
+  Timestamp                = {2015.10.13},
+  Url                      = {http://dx.doi.org/10.1007/s00607-010-0106-z}
 }
 
 @Article{Dudley2010,
@@ -555,6 +599,16 @@
   Timestamp                = {2015.10.11}
 }
 
+@Article{cloudOverview,
+  Title                    = {Public vs Private vs Hybrid vs Community - Cloud Computing: A Critical Review},
+  Author                   = {Sumit Goyal},
+  Journal                  = {International Journal of Computer Network \& Information Security;Feb2014, Vol. 6 Issue 3, p20},
+  Year                     = {February 2014},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
+}
+
 @Article{nist,
   Title                    = {The NIST Definition of Cloud
 Computing},
@@ -603,6 +657,24 @@ Timothy Grance},
   Bdsk-url-1               = {https://www.grnet.gr/en/node/400},
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@Article{Grossm2009,
+  Title                    = {The Case for Cloud Computing},
+  Author                   = {Robert L. Grossman},
+  Journal                  = {IT Professional},
+  Year                     = {2009},
+  Number                   = {2},
+  Pages                    = {23-27},
+  Volume                   = {11},
+
+  __markedentry            = {[revekka:]},
+  Address                  = {Los Alamitos, CA, USA},
+  Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MITP.2009.40},
+  ISSN                     = {1520-9202},
+  Owner                    = {revekka},
+  Publisher                = {IEEE Computer Society},
+  Timestamp                = {2015.10.13}
 }
 
 @Electronic{androidComponentsKnoxville,
@@ -708,7 +780,6 @@ Timothy Grance},
   Pages                    = {146--150},
   Volume                   = {45},
 
-  __markedentry            = {[ilias:6]},
   Booktitle                = {Biomedical Instrumentation \& Technology},
   Comment                  = {doi: 10.2345/0899-8205-45.2.146},
   Doi                      = {10.2345/0899-8205-45.2.146},
@@ -749,6 +820,23 @@ Timothy Grance},
   Owner                    = {ilias},
   Timestamp                = {2015.10.12},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
+}
+
+@Article{Kaufm2009,
+  Title                    = {Data Security in the World of Cloud Computing},
+  Author                   = {Lori M. Kaufman},
+  Journal                  = {IEEE Security \& Privacy},
+  Year                     = {2009},
+  Number                   = {4},
+  Pages                    = {61-64},
+  Volume                   = {7},
+
+  Address                  = {Los Alamitos, CA, USA},
+  Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MSP.2009.87},
+  ISSN                     = {1540-7993},
+  Owner                    = {revekka},
+  Publisher                = {IEEE Computer Society},
+  Timestamp                = {2015.10.13}
 }
 
 @Article{landsteinerABO,
@@ -876,6 +964,18 @@ Timothy Grance},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S187704281403938X}
 }
 
+@Article{Missbach,
+  Title                    = {Private Cloud Infrastructures for
+SAP},
+  Author                   = {M. Missbach, J. Stelzel, C. Gardiner, G. Anderson
+and M. Tempes},
+  Journal                  = {Springer Berlin Heidelberg},
+  Year                     = {2013},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
+}
+
 @Article{Marantidou2007,
   Title                    = {Factors that motivate and hinder blood donation in Greece},
   Author                   = {Marantidou, O and Loukopoulou, L and Zervou, E and Martinis, G and Egglezou, A and Fountouli, P and Dimoxenous, P and Parara, M and Gavalaki, M and Maniatis, A},
@@ -968,6 +1068,20 @@ Timothy Grance},
   Timestamp                = {2015.09.14}
 }
 
+@InProceedings{Peng2009,
+  Title                    = {Comparison of Several Cloud Computing Platforms},
+  Author                   = {Junjie Peng and Xuejun Zhang and Zhou Lei and Bofeng Zhang and Wu Zhang and Qing Li},
+  Booktitle                = {Information Science and Engineering (ISISE), 2009 Second International Symposium on},
+  Year                     = {2009},
+  Month                    = {Dec},
+  Pages                    = {23-27},
+
+  Doi                      = {10.1109/ISISE.2009.94},
+  Keywords                 = {grid computing;cloud computing platforms;distributed computing;grid computing;parallel computing;Cloud computing;Computer industry;Computer science;Concurrent computing;Distributed computing;Grid computing;High performance computing;Network servers;Parallel processing;Platform virtualization;IaaS;PaaS;SaaS;cloud computing;utility computing;virtualization},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
+}
+
 @Article{Politis,
   Title                    = {Blood donation systems as an integral part of the health system},
   Author                   = {Politis},
@@ -997,6 +1111,16 @@ Timothy Grance},
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.07}
+}
+
+@Article{palwe,
+  Title                    = {A NEW APPROACH TO HYBRID CLOUD},
+  Author                   = {Rajnikant Palwe , Gurudatt Kulkarni , Amruta Dongare},
+  Journal                  = {International Journal of Computer Science and Engineering Research and Development},
+  Year                     = {2015},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Article{citeulike:382810,
@@ -1034,6 +1158,18 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
+}
+
+@Article{IaasService,
+  Title                    = {Cloud computing:
+A study of infrastructure as a service},
+  Author                   = {S. Bhardwaj, J. Jain and S. Jain},
+  Journal                  = {International Journal of engineering and information
+Technology},
+  Year                     = {2010},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Article{Schweitzer2012,
@@ -1220,6 +1356,21 @@ URN: urn:nbn:de:0114-fqs0501297},
   Bdsk-url-1               = {https://www.bcw.edu/bcw/Blood-Donation/all-about-blood/index.htm},
   Owner                    = {ilias},
   Timestamp                = {2015.10.03}
+}
+
+@InProceedings{Zhou2013,
+  Title                    = {Prometheus: Privacy-aware data retrieval on hybrid cloud},
+  Author                   = {Zhigang Zhou and Hongli Zhang and Xiaojiang Du and Panpan Li and Xiangzhan Yu},
+  Booktitle                = {INFOCOM, 2013 Proceedings IEEE},
+  Year                     = {2013},
+  Month                    = {April},
+  Pages                    = {2643-2651},
+
+  Doi                      = {10.1109/INFCOM.2013.6567072},
+  ISSN                     = {0743-166X},
+  Keywords                 = {cloud computing;cryptography;data privacy;outsourcing;query processing;trusted computing;Hadoop;MapReduce framework;Prometheus;cloud platform;data operations;data outsourcing;data owner;data partition strategy;data privacy concerns;economic savings;encryption;hybrid cloud computing;large-scale cloud test-bed;malicious cloud model;privacy-aware data retrieval;privacy-preserving features;public data;semihonest cloud model;sensitive information;trusted private cloud;Algorithm design and analysis;Cloud computing;Data privacy;Encryption;Partitioning algorithms;Privacy;MapReduce;data partition;data retrieval;hybrid cloud;privacy-aware},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Book{GamificationDesign,
