--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -31,7 +31,7 @@
 	\subsubsection{Θεωρητικό υπόβαθρο υπολογιστικού νέφους}
 	To cloud computing (υπολογιστικό νέφος) όπως ορίζεται από το NIST (Εθνικό Ινστιτούτο Προτύπων και Τεχνολογίας)  είναι μια τεχνολογία, η οποία επιτρέπει την πρόσβαση από παντού, παρέχει μετά από αίτημα πρόσβαση στο δίκτυο για την κοινή χρήση προσαρμοστικών υπολογιστικών πόρων (π.χ., δίκτυα, servers, συστήματα αποθήκευσης, εφαρμογές και υπηρεσίες), μπορεί να ξεκινήσει και να αναπτυχθεί γρήγορα με ελάχιστη διαχείριση και χωρίς καμία αλληλεπίδραση με τον φορέα παροχής υπηρεσιών. \cite{cloudComputing} Το cloud computing παρέχει στους χρήστες και στις επιχειρήσεις διάφορες δυνατότητες για την αποθήκευση και την επεξεργασία των δεδομένων τους σε τρίτα κέντρα δεδομένων. \cite{Haghighat2015}
 	
-	Το cloud computing ουσιαστικά στηρίζεται στην κατανομή των πόρων με στόχο την επίτευξη συνοχής και οικονομίας μέσω ενός δικτύου και την μεγιστοποίηση της απόδοσης τους. Οι πόροι του cloud δεν είναι μόνο διαμοιραζόμενοι από πολλούς χρήστες αλλά μπορούν και να ανακατανεμηθούν δυναμικά ανάλογα με την ζήτηση, γεγονός που μπορεί να χρησιμοποιηθεί όταν κατανέμονται στους διάφορους χρήστες.  Για παράδειγμα, μια cloud εγκατάσταση ηλεκτρονικών υπολογιστών οι οποία εξυπηρετεί Ευρωπαίους χρήστες στην διάρκεια των Ευρωπαϊκών εργάσιμων ωρών μπορεί να ανακατανείμει τους ίδιους πόρους για να εξυπηρετήσει χρήστες στην Βόρεια Αμερική κατά τις εργάσιμες ώρες της Βόρειας Αμερικής σε μία διαφορετική εφαρμογή. Αυτή η προσέγγιση βοηθά στην μεγιστοποίηση της χρήσης της υπολογιστικής ισχύος ενώ ταυτόχρονα μειώνεται το ολικό κόστος των φυσικών πόρων καθώς χρησιμοποιούμε λιγότερη ενέργεια, κλιματισμό κ.λ.π. για να διατηρείται το σύστημα.Με χρήση του cloud computing πολλοί χρήστες μπορούν να έχουν πρόσβαση σε έναν server και να ανακτούν και να ανανεώνουν τα δεδομένα τους χωρίς να αγοράζουν άδειες για όλες τις διαφορετικές εφαρμογές. 
+	Το cloud computing ουσιαστικά στηρίζεται στην κατανομή των πόρων με στόχο την επίτευξη συνοχής και οικονομίας μέσω ενός δικτύου και την μεγιστοποίηση της απόδοσης τους. Οι πόροι του cloud δεν είναι μόνο διαμοιραζόμενοι από πολλούς χρήστες αλλά μπορούν και να ανακατανεμηθούν δυναμικά ανάλογα με την ζήτηση, γεγονός που μπορεί να χρησιμοποιηθεί όταν κατανέμονται στους διάφορους χρήστες.  Για παράδειγμα, μια cloud εγκατάσταση ηλεκτρονικών υπολογιστών οι οποία εξυπηρετεί Ευρωπαίους χρήστες στην διάρκεια των Ευρωπαϊκών εργάσιμων ωρών μπορεί να ανακατανείμει τους ίδιους πόρους για να εξυπηρετήσει χρήστες στην Βόρεια Αμερική κατά τις εργάσιμες ώρες της Βόρειας Αμερικής σε μία διαφορετική εφαρμογή. Αυτή η προσέγγιση βοηθά στην μεγιστοποίηση της χρήσης της υπολογιστικής ισχύος ενώ ταυτόχρονα μειώνεται το ολικό κόστος των φυσικών πόρων καθώς χρησιμοποιούμε λιγότερη ενέργεια, κλιματισμό κ.λ.π. για να διατηρείται το σύστημα.Με χρήση του cloud computing πολλοί χρήστες μπορούν να έχουν πρόσβαση σε έναν server και να ανακτούν και να ανανεώνουν τα δεδομένα τους χωρίς να αγοράζουν άδειες για όλες τις διαφορετικές εφαρμογές. \cite{Grossm2009}
 	
 	Οι πάροχοι cloud συνήθως χρησιμοποιούν μοντέλο κοστολόγησης "πλήρωσε όσο χρησιμοποιήσεις".  Παρουσιάζει σπουδαιότητα λοιπόν το γεγονός ότι οι "πελάτες" μπορούν να εξοικονομήσουν χρηματικούς πόρους στο πέρασμα του χρόνου, καθώς χρησιμοποιώντας τους πόρους στο cloud, πληρώνουν μόνο για τους πόρους που χρησιμοποιούν και όχι για την αγορά και συντήρηση άφθονων μηχανημάτων (π.χ. εξυπηρετητών). Η λύση λοιπόν του cloud computing λοιπόν αποτελεί μία ιδιαίτερα ελκυστική προοπτική για τους χρήστες στους οποίους η χρήση των πόρων ποικίλλει σημαντικά καθώς και σε αυτούς στους οποίους  η αγορά μηχανημάτων και το κόστος συντήρησης τους αποτελούν σημαντικό τμήμα του προϋπολογισμού. 
 
@@ -66,7 +66,7 @@
 
 		Η υποδομή σαν υπηρεσία προσφέρει πρόσβαση σε υπολογιστικούς πόρους στο εικονικό περιβάλλον του cloud, σε εικονικό υλικό (hardware). Το εικονικό υλικό περιλαμβάνει εικονικό χώρο server, συνδέσεις δικτύου, εύρος ζώνης, διευθύνσεις IP  και εξισορροπιστές φορτίου. Το σύνολο των πόρων του υλικού προκύπτει από ένα πλήθος servers και δικτύων που είναι κατανεμημένοι συνήθως σε διάφορα κέντρα δεδομένων και ο πάροχος cloud είναι υπεύθυνος για την διατήρηση. Στον χρήστη δίνεται πρόσβαση στους πόρους αυτούς του cloud ώστε να μπορεί να χτίσει τις δικές του πλατφόρμες πληροφορικής. 
 		
-		Οι IaaS υπηρεσίες μπορούν σε συνδυασμό με άλλες υπηρεσίες του cloud να χρησιμοποιηθούν για την δημιουργία οικονομικά συμφέρουσων και εύκολα επεκτάσιμων λύσεων πληροφορικής, όπου οι δυσκολίες και τα έξοδα διαχείρισης έχουν ανατεθεί στον πάροχο cloud. Όταν οι δραστηριότητες του χρήστη κλιμακώνονται, και επιθυμεί μία επέκταση ή σμίκρυνση των υπολογιστικών πόρων, τότε μπορεί να αντλήσει ή να εγκαταλείψει πόρους cloud χωρίς να χρειάζεται να αγοραστεί, να εγκατασταθεί και να ενσωματωθεί νέο υλικό από τον ίδιο. 
+		Οι IaaS υπηρεσίες μπορούν σε συνδυασμό με άλλες υπηρεσίες του cloud να χρησιμοποιηθούν για την δημιουργία οικονομικά συμφέρουσων και εύκολα επεκτάσιμων λύσεων πληροφορικής, όπου οι δυσκολίες και τα έξοδα διαχείρισης έχουν ανατεθεί στον πάροχο cloud. Όταν οι δραστηριότητες του χρήστη κλιμακώνονται, και επιθυμεί μία επέκταση ή σμίκρυνση των υπολογιστικών πόρων, τότε μπορεί να αντλήσει ή να εγκαταλείψει πόρους cloud χωρίς να χρειάζεται να αγοραστεί, να εγκατασταθεί και να ενσωματωθεί νέο υλικό από τον ίδιο. \cite{IaasService}
 		
 		Η υπηρεσία IaaS προσφέρει επεκτασιμότητα. Οι πόροι είναι διαθέσιμοι την χρονική στιγμή που τους χρειάζεται ο πελάτης και έτσι αποφεύγονται καθυστερήσεις στην επέκταση της παραγωγικής ικανότητας. Επιπλέον, δεν υπάρχει η ανάγκη για επενδύσεις στο υλικό (hardware).  Το "φυσικό" υλικό το οποίο βρίσκεται πίσω από την IaaS υπηρεσία έχει στηθεί και συντηρείται από τον πάροχο cloud, με αποτέλεσμα να εξοικονομείται χρόνος και χρήμα στην πλευρά του χρήστη.  Ένα βασικό πλεονέκτημα  είναι ότι ο πελάτης κοστολογείται με βάση την χρήση και πληρώνει μόνο τους πόρους που χρησιμοποιεί. Οι υπηρεσίες μπορούν να προσεγγισθούν από οποιαδήποτε τοποθεσία, αρκεί ο χρήστης να έχει πρόσβαση στο ίντερνετ και τα κατάλληλα διαπιστευτήρια, γεγονός που εξασφαλίζει ανεξαρτησία σε σχέση με την τοποθεσία. Τέλος, στις υπηρεσίες IaaS δεν υπάρχει περίπτωση κατάρρευσης ή βλάβης στο σύστημα, καθώς ακόμα και αν ένας server ή ένας διακόπτης δικτύου πέσει η ευρύτερη υπηρεσία θα παραμείνει ανεπηρέαστη λόγω των υπόλοιπων πόρων υλικού καθώς και των επιπλέων ρυθμίσεων. Στις περισσότερες περιπτώσεις, ακόμα και αν έπεφτε ολόκληρο το κέντρο δεδομένων, με εξαίρεση έναν server ο οποίος θα συνέχιζε να λειτουργεί, αυτό θα ήταν αρκετό ώστε οι IaaS υπηρεσίες να εξακολουθούν να τρέχουν ανεμπόδιστα. Ένα μειονέκτημα που υπάρχει είναι ότι σε περιπτώσεις που υπάρχει ανάγκη για αλληλεπίδραση υψηλής ταχύτητας μεταξύ του εσωτερικού λογισμικού ή λογισμικού που υπάρχει σε κάποιο άλλο cloud σας και τον πάροχο υπηρεσιών IaaS Cloud, στηριζόμενοι σε μια internet σύνδεση μπορεί να μην γίνεται να επιτευχθεί η ταχύτητα που χρειάζεται. \cite{images}
 	\\*	
@@ -80,7 +80,7 @@
 		
 		\subsubsection{PaaS}
 	
-		Η πλατφόρμα σαν υπηρεσία παρέχει στους πελάτες του υπολογιστικού νέφους όλους τους πόρους και τα εργαλεία που απαιτούνται για να έχουν την δυνατότητα να αναπτύξουν, να διαχειριστούν και να τρέξουν εφαρμογές στο διαδίκτυο χωρίς την πολυπλοκότητα και την ανάγκη εγκατάστασης της υποδομής (λογισμικού) που συνήθως συνδέονται με την ανάπτυξη και την έναρξη μιας εφαρμογής. Οι πλατφόρμες σαν υπηρεσίες προσφέρονται σε δύο διαφορετικές μορφές: είτε σαν δημόσιες cloud υπηρεσίες από τον πάροχο στις οποίες  ο χρήστης  ελέγχει την ανάπτυξη του λογισμικού και τις ρυθμίσεις διαμόρφωσης καθώς ο πάροχος εξασφαλίζει το απαραίτητο υπόβαθρο που χρειάζεται η εφαρμογή, είτε σαν λογισμικό που εγκαθίσταται σε ιδιωτικά κέντρα δεδομένων ή δημόσια υποδομή ως υπηρεσία που διοικείται από εσωτερικά συστήματα πληροφορικής. 
+		Η πλατφόρμα σαν υπηρεσία παρέχει στους πελάτες του υπολογιστικού νέφους όλους τους πόρους και τα εργαλεία που απαιτούνται για να έχουν την δυνατότητα να αναπτύξουν, να διαχειριστούν και να τρέξουν εφαρμογές στο διαδίκτυο χωρίς την πολυπλοκότητα και την ανάγκη εγκατάστασης της υποδομής (λογισμικού) που συνήθως συνδέονται με την ανάπτυξη και την έναρξη μιας εφαρμογής. Οι πλατφόρμες σαν υπηρεσίες προσφέρονται σε δύο διαφορετικές μορφές: είτε σαν δημόσιες cloud υπηρεσίες από τον πάροχο στις οποίες  ο χρήστης  ελέγχει την ανάπτυξη του λογισμικού και τις ρυθμίσεις διαμόρφωσης καθώς ο πάροχος εξασφαλίζει το απαραίτητο υπόβαθρο που χρειάζεται η εφαρμογή, είτε σαν λογισμικό που εγκαθίσταται σε ιδιωτικά κέντρα δεδομένων ή δημόσια υποδομή ως υπηρεσία που διοικείται από εσωτερικά συστήματα πληροφορικής. \cite{Peng2009}
 		
 		Στο μοντέλο PaaS ο χρήστης δεν ελέγχει την υποκείμενη cloud υποδομή, η οποία συμπεριλαμβάνει το δίκτυο, τους servers, το λειτουργικό σύστημα και τους αποθηκευτικούς χώρους αλλά έχει τον πλήρη έλεγχο στις εγκατεστημένες ή αναπτυγμένες εφαρμογές καθώς και στις ρυθμίσεις των παραμέτρων που γίνονται στο περιβάλλον. Το μοντέλο PaaS βασίζεται σε χρήση της HTML ή Javascript. Υπάρχουν διάφοροι τύποι του μοντέλου PaaS, δημόσιοι, ιδιωτικοί και υβριδικοί. Σε αυτού του τύπου το μοντέλο παροχής υπηρεσιών cloud απαιτούνται δύο επίπεδα προστασίας για την διασφάλιση της ασφάλειας της ιδιωτικής ζωής. Στο χαμηλότερο επίπεδο του συστήματος, ο πάροχος cloud μπορεί να παρέχει βασικούς μηχανισμούς ασφαλείας, όπως end-to-end κρυπτογράφηση, έλεγχο ταυτότητας και εξουσιοδότηση. Στο υψηλότερο επίπεδο, ο  χρήστης των υπηρεσιών cloud χρειάζεται να καθορίσει τις πολιτικές ελέγχου της πρόσβασης στην εφαρμογή.\cite{Kanagaraj2011}
 		
@@ -149,7 +149,7 @@
 	\subsubsection{Private cloud}
 
 	 
-	Το ιδιωτικό cloud, είναι ένα μοντέλο το οποίο λειτουργεί αποκλειστικά για έναν οργανισμό, διευθύνεται είτε από τον ίδιο τον οργανισμό είτε από τρίτους και εγκαθίσταται είτε εσωτερικά είτε εξωτερικά. Περιλαμβάνει ένα ξεχωριστό και ασφαλές περιβάλλον με το οποίο μπορούν να αλληλεπιδράσουν οι   χρήστες. Τα ιδιωτικά clouds παρέχουν μεγάλη υπολογιστική ισχύ σαν υπηρεσία χρησιμοποιώντας ένα σύνολο από φυσικούς υπολογιστικούς πόρους, οι οποίοι είναι προσβάσιμοι μόνο από έναν οργανισμό, εξασφαλίζοντας περισσότερο έλεγχο και αυξημένη ασφάλεια. Τα δημόσια clouds περιλαμβάνουν πολλούς πελάτες οι οποίοι έχουν πρόσβαση σε εικονικές υπηρεσίες που αντλούν πόρους από την ίδια ομάδα από servers μέσω δημοσίων δικτύων. Τα ιδιωτικά clouds από την άλλη πλευρά, περιλαμβάνουν την οριοθέτηση ενός cloud για την αποκλειστική χρήση ενός οργανισμού. Παρόλο που χρησιμοποιούνται ξεχωριστοί πόροι, μπορούν να γίνουν προσβάσιμοι μέσω ιδιωτικών γραμμών ή ασφαλών κρυπτογραφημένων συνδέσεων μέσω των δημόσιων δικτύων. 
+	Το ιδιωτικό cloud, είναι ένα μοντέλο το οποίο λειτουργεί αποκλειστικά για έναν οργανισμό, διευθύνεται είτε από τον ίδιο τον οργανισμό είτε από τρίτους και εγκαθίσταται είτε εσωτερικά είτε εξωτερικά. Περιλαμβάνει ένα ξεχωριστό και ασφαλές περιβάλλον με το οποίο μπορούν να αλληλεπιδράσουν οι   χρήστες. Τα ιδιωτικά clouds παρέχουν μεγάλη υπολογιστική ισχύ σαν υπηρεσία χρησιμοποιώντας ένα σύνολο από φυσικούς υπολογιστικούς πόρους, οι οποίοι είναι προσβάσιμοι μόνο από έναν οργανισμό, εξασφαλίζοντας περισσότερο έλεγχο και αυξημένη ασφάλεια. Τα δημόσια clouds περιλαμβάνουν πολλούς πελάτες οι οποίοι έχουν πρόσβαση σε εικονικές υπηρεσίες που αντλούν πόρους από την ίδια ομάδα από servers μέσω δημοσίων δικτύων. Τα ιδιωτικά clouds από την άλλη πλευρά, περιλαμβάνουν την οριοθέτηση ενός cloud για την αποκλειστική χρήση ενός οργανισμού. Παρόλο που χρησιμοποιούνται ξεχωριστοί πόροι, μπορούν να γίνουν προσβάσιμοι μέσω ιδιωτικών γραμμών ή ασφαλών κρυπτογραφημένων συνδέσεων μέσω των δημόσιων δικτύων. \cite{Doelitzscher2011} \cite{Missbach}
 	
 	Τα ιδιωτικά cloud είναι κατάλληλα για περιπτώσεις στις οποίες υπάρχει η ανάγκη αποθήκευσης και επεξεργασίας ιδιωτικών η ευαίσθητων δεδομένων ή η ανάγκη διεξαγωγής ευαίσθητων εργασιών. Για παράδειγμα, μία ιδιωτική cloud υπηρεσία μπορεί να χρησιμοποιηθεί από ένα πληροφοριακό σύστημα με που διαχειρίζεται και αποθηκεύει ευαίσθητα ιατρικά δεδομένα και θέλει να επωφεληθεί από τα πλεονεκτήματα του cloud computing στην επιχειρησιακή υποδομή του. 	Υιοθετεί τις βασικές αρχές ασφαλείας, νομοθεσίας και κανονιστικών απαιτήσεων αφού προσφέρει μεγάλο έλεγχο εγκατάστασης και χρήσης στην επιχείρηση που το χρησιμοποιεί.Το ιδιωτικό μοντέλο cloud μοιάζει  αρκετά με το μοντέλο των  δικτύων τοπικής πρόσβασης (LAN) που χρησιμοποιούταν στο παρελθόν αλλά παρέχει τα επιπλέον πλεονεκτήματα του cloud. Κάποια από τα πλεονεκτήματα του ιδιωτικού cloud είναι:
 	
@@ -167,9 +167,47 @@
 	
 		
 		\subsubsection{Community cloud}
+		
+		Το κοινοτικό cloud είναι ένα μοντέλο νέφους το οποίο μοιράζεται σε διάφορους οργανισμούς και υποστηρίζει μια συγκεκριμένη κοινότητα που έχει κοινά ενδιαφέροντα (ασφάλειας,  συμμόρφωσης, της διεθνούς δικαιοδοσίας, κλπ). Η διαχείριση του νέφουε μπορεί να γίνει είτε εσωτερικά  από τον ίδιο τον οργανισμό είτε από τρίτους και υλοποιείται είτε εντός είτε εκτός του οργανισμού. Οι δαπάνες κατανέμονται σε λιγότερους χρήστες από ότι σε ένα δημόσιο cloud (περισσότερος βέβαια από ότι σε ένα ιδιωτικό cloud), και έτσι πραγματοποιούνται μόνο μερικές από τις δυνατότητες εξοικονόμησης κόστους του cloud computing.	\cite{Briscoe2009} \cite{condori}
+	
+	Το κοινοτικό cloud φιλοδοξεί να συνδυάσει την υπολογιστική παροχή των πόρων που διανέμεται από το δίκτυο, τον κατανεμημένο έλεγχο από τα ψηφιακή οικοσυστήματα και την βιωσιμότητας της "πράσινης" πληροφορικής, με τις περιπτώσεις χρήσης του cloud computing, κάνοντας μεγαλύτερη χρήση των πλεονεκτημάτων της αυτοδιαχείρισης του υπολογιστικού συστήματος. Τα πλεονεκτήματα του κοινοτικού cloud περιλαμβάνουν:
+	\begin{itemize}
+	
+	\item Χαμηλότερο κόστος. Το κόστος της δημιουργίας ενός κοινοτικού cloud έναντι των ιδιωτικά cloud μπορεί να είναι χαμηλότερο λόγω της κατανομή των κοστών σε όλους τους συμμετέχοντες.
+
+	\item Ανάθεση της διαχείρισης σε έναν πάροχο cloud. Το πλεονέκτημα έγκειται στο γεγονός ότι ο πάροχος θα είναι ένας αμερόληπτος τρίτος που δεσμεύεται από σύμβαση και δεν έχει καμία προτίμηση σε κάποιον από τους πελάτες που εμπλέκονται.
+	
+	\end{itemize}
+
+Βασικό μειονέκτημα αποτελεί το γεγονός οτι το κόστος είναι πολυ υψηλότερο από ότι στα δημόσια clouds. \cite{cloudOverview}
+
+		
+		
+		
 		\subsubsection{Hybrid cloud}
 		
+		Τα υβριδικά clouds είναι μία ολοκληρωμένη υπηρεσία που αποτελείται από δύο ή περισσότερα clouds (ιδιωτικά, δημόσια ή κοινοτικά) τα οποία παραμένουν ξεχωριστές οντότητες αλλά συνδέονται μεταξύ τους, προσφέροντας τα πλεονεκτήματα των πολλαπλών μοντέλων ανάπτυξης. Μια υπηρεσία υβριδικού cloud ξεπερνά τα όρια του παρόχου σε σχέση με τις άλλες υπηρεσίες cloud,  με αποτέλεσμα να μην μπορεί να κατηγοριοποιηθεί  απλά σε μία κατηγορία ιδιωτικών, δημόσιων ή κοινοτικών υπηρεσιών cloud. Με τα υβριδικά clouds μπορεί να επεκταθεί η ικανότητα ή η χωρητικότητα μιας υπηρεσίας μέσω της ένταξης ή της προσαρμογής με κάποια άλλη υπηρεσία cloud. \cite{palwe}
+		
+		Η επιλογή υλοποίησης ενός υβριδικού cloud εξαρτάται από έναν αριθμό παραγόντων, όπως οι απαιτήσεις ασφάλειας των δεδομένων και των λειτουργιών πάνω σε αυτά, το επίπεδο ελέγχου που απαιτείται, καθώς και τις εφαρμογές που χρησιμοποιεί ο χρήστης. Όλες οι υπηρεσίες του cloud computing προσφέρουν βελτίωση της αποτελεσματικότητας, αλλά οι υπηρεσίες των δημόσιων clouds υπερτερούν σε σχέση με αυτές των ιδιωτικών λόγω χαμηλότερου κόστους και καλύτερης κλιμάκωσης. Ως εκ τούτου, ένας οργανισμός μπορεί να μεγιστοποιήσει την αποτελεσματικότητα του χρησιμοποιώντας υπηρεσιές από δημόσια clouds για όλες τις μη-ευαίσθητες λειτουργίες, στηριζόμενος σε χρήση ιδιωτικού cloud μόνο όταν κρίνεται τελείως απαραίτητο, και διασφαλίζοντας ότι όλες οι πλατφόρμες συνεργάζονται άψογα μεταξύ τους. \cite{Zhou2013}
+		
+		Το εξειδικευμένο μοντέλο του υβριδικού cloud, το οποίο είναι χτισμένο πάνω σε ετερογενές hardware, ονομάζεται "Cross-platform Hybrid Cloud". Συνήθως χρησιμοποιούνται διαφορετικές αρχιτεκτονικές επεξεργαστών, για παράδειγμα, x86-64 και ARM. Οι χρήστες μπορούν να αναπτύξουν εφαρμογές με πλήρη διαφάνεια, χωρίς να γνωρίζουν την πολυμορφία του υλικού του cloud. Αυτό το είδος cloud έχει προκύπτει από την αύξηση των βασισμένων σε ARM system-on-chip αρχιτεκτονικών για servers.
+		
+		Ένα ειδικά διαμορφωμένο υβριδικό cloud, προσφέρει τα εξής πλεονεκτήματα:
+		
+		\begin{itemize}
+
+		\item Επεκτασιμότητα. Ενώ τα ιδιωτικά clouds προσφέρουν δυνατότητα κλιμάκωσης η οποία εξαρτάται από τις ρυθμίσεις τους (όπως το αν φιλοξενούνται εσωτερικά ή εξωτερικά), οι υπηρεσίες των δημοσίων cloud computing προσφέρουν πολύ αυξημένες δυνατότητες επεκτασιμότητας, διότι οι πόροι τους προέρχονται από μεγαλύτερες υποδομές. Υλοποιώντας τις μη-ευαίσθητες λειτουργίες σε δημόσιο cloud μπορεί ένας οργανισμός να επωφεληθεί από την επεκτασιμότητα του δημόσιου cloud και ταυτόχρονα να μειώσει τις απαιτήσεις στο ιδιωτικό cloud.
+		
+		\item Εξοικονόμηση κόστους. Τα δημόσια clouds  προσφέρουν με χρήση υπηρεσιών (όπως η κεντρική διαχείριση) μεγαλύτερη αποδοτικότητα κόστους, από  τα ιδιωτικά clouds. Ως εκ τούτου, τα υβριδικά σύννεφα επιτρέπουν στους οργανισμούς να έχουν πρόσβαση σε αυτές τις συμφέρουσες υπηρεσίες για όσες από τις λειτουργίες τους είναι εφικτό, διατηρώντας ωστόσο τις ευαίσθητες λειτουργίες ασφαλείς στο ιδιωτικό cloud.
+
+		\item Ασφάλεια. Το ιδιωτικό cloud του μοντέλου υβριδικού cloud παρέχει την απαραίτητη ασφάλεια για τις ευαίσθητες λειτουργίες και επιπλέον σε πολλές περιπτώσεις τηρεί τις προϋποθέσεις για τον χειρισμό και την αποθήκευση δεδομένων.
+
+		\item Ευελιξία. Η διαθεσιμότητα τόσο των ασφαλών πόρων του ιδιωτικού cloud και όσο και των οικονομικότερων των δημοσίων cloud, παρέχει στους οργανισμούς περισσότερες ευκαιρίες για να εξερευνήσουν διαφορετικές επιχειρησιακές κατευθύνσεις.
+		\end{itemize} 
+		
 		\subsubsection{NodeJs}
+		
+		\cite{Kaufm2009}
 		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
 	\subsection{Βάση Δεδομένων}
 	Στον τομέα της επιστήμης των υπολογιστών όταν αναφερόμαστε στον όρο NoSQL (Not Only SQL), μιλάμε για ένα ευρύ φάσμα συστημάτων διαχείρισης βάσεων δεδομένων τα οποία παρέχουν ένα μηχανισμό προς αποθήκευση και ανάκτηση δεδομένων διαφορετικό από αυτό του σχεσιακού μοντέλου των κλασσικών RDBMS (Relational database management system). Τα συστήματα NoSQL ξεφεύγουν από την παραδοσιακή χρήση πινάκων για την οργάνωση των δεδομένων και χρησιμοποιούν διαφορετικές δομές οργάνωσης όπως αυτή του κλειδιού-τιμής. Επιπροσθέτως η επεξεργασίά αυτών των δεδομένων δεν γίνεται με χρήση ερωτημάτων SQL όπως έχουμε συνηθίσει. Λόγω των εγγενών διαφορών μεταξύ των δύο αυτών συστημάτων, κάποιες λειτουργίες είναι ταχύτερες στα συστήματα NoSQL ενώ κάποιες άλλες στα συστήματα σχεσιακών βάσεων δεδομένων.
